# interop

./: .gitignore  CONTRACT.md  README.md  scenarios.yaml
.github/workflows/: matrix.yaml
fixture/: README.md  allowlist.txt  operator.pub
fixture/creds/: account.creds  bearer.creds  expired.creds  revoked.creds  user.creds  wrongkey.creds
harness/: README.md
harness/go-0.12/: Dockerfile  go.mod  go.sum  manifest.yaml  smoke_test.go
harness/go-0.12/cmd/client/: main.go
harness/go-0.12/cmd/server/: main.go
harness/go-0.12/internal/reason/: reason.go
harness/go-0.12/interoppb/: interop.pb.go  interop_grpc.pb.go
harness/go-0.13/: Dockerfile  go.mod  go.sum  manifest.yaml  smoke_test.go
harness/go-0.13-echo4/: Dockerfile  go.mod  go.sum  manifest.yaml  smoke_test.go
harness/go-0.13-echo4/cmd/server/: main.go
harness/go-0.13-echo4/internal/wire/: wire.go
harness/go-0.13-gin/: Dockerfile  go.mod  go.sum  manifest.yaml  smoke_test.go
harness/go-0.13-gin/cmd/server/: main.go
harness/go-0.13-gin/internal/reason/: reason.go
harness/go-0.13-gin1/: Dockerfile  go.mod  manifest.yaml  smoke_test.go
harness/go-0.13-gin1/cmd/server/: main.go
harness/go-0.13/cmd/client/: main.go
harness/go-0.13/cmd/server/: main.go
harness/go-0.13/internal/reason/: reason.go
harness/go-0.13/interoppb/: interop.pb.go  interop.proto  interop_grpc.pb.go
harness/go-0.13rc1/: Dockerfile  go.mod  go.sum  manifest.yaml  smoke_test.go
harness/go-0.13rc1/cmd/client/: main.go
harness/go-0.13rc1/cmd/server/: main.go
harness/go-0.13rc1/internal/wire/: wire.go
harness/go-0.13rc1/interoppb/: interop.proto
harness/py-0.8/: .gitignore  Dockerfile  manifest.yaml  pyproject.toml
harness/py-0.8-asgi/: Dockerfile  manifest.yaml  pyproject.toml  smoke.sh  smoke_test.py
harness/py-0.8-asgi/interopharness/: server.py  wire.py
harness/py-0.8-asgi3/: Dockerfile  manifest.yaml  pyproject.toml
harness/py-0.8-asgi3/interopharness/: app.py  reason.py  server.py
harness/py-0.8-django4/: Dockerfile  manifest.yaml  pyproject.toml  smoke.sh
harness/py-0.8-django4/interopharness/: auth.py  middleware.py  reason.py  server.py  urls.py  views.py  wire.py
harness/py-0.8-django5/: Dockerfile  manifest.yaml  pyproject.toml  smoke.sh  smoke_test.py
harness/py-0.8-django5/interopharness/: middleware.py  server.py  valiss.py  views.py  wire.py
harness/py-0.8-httpx/: Dockerfile  manifest.yaml  pyproject.toml  smoke.sh  smoke_test.py
harness/py-0.8-httpx/interopharness/: client.py
harness/py-0.8/interopharness/: __init__.py  client.py  server.py  wire.py
harness/py-0.8/interoppb/: __init__.py  interop.proto
harnesses/: README.md
impl/: README.md
orchestrator/: README.md  go.mod  main.go
orchestrator/internal/matrix/: github.go  judge.go  judge_test.go  matrix.go  report.go
orchestrator/internal/runner/: apple.go  cliengine.go  container.go  local.go  outcome.go  outcome_test.go  runner.go
orchestrator/internal/suite/: grid.go  grid_test.go  manifest.go  manifest_test.go  scenario.go  scenario_test.go
