# The py-0.8-asgi3 entry's runnable as one installable package: the console
# script lands in /usr/local/bin as py-0.8-asgi3-server, the path the
# orchestrator's container runners invoke. The valiss dependency is the frozen
# 0.8 series; the Dockerfile supplies it from the v0.8.0 git tag (valiss-py is
# not published to PyPI). The ASGI major lives in the manifest's
# adapter_version; the exact host-server and starlette patches are this
# lockfile's to bump. starlette is pinned directly because the shipped
# "pure-ASGI" middlewares import it at module load (valiss ships it under the
# `fastapi` extra); uvicorn hosts the app single-process so the in-memory
# replay cache sees every nonce.
[project]
name = "valiss-interop-py-0-8-asgi"
version = "0"
description = "py-0.8-asgi3 valiss interop harness entry: ASGI server runnable (CONTRACT.md)"
requires-python = ">=3.11"
dependencies = [
    "valiss==0.8.0",
    "cryptography==49.0.0",
    "starlette==1.3.1",
    "uvicorn==0.51.0",
]

[project.scripts]
# Quoted: a bare py-0.8-asgi3-server would TOML-parse as a dotted key.
"py-0.8-asgi3-server" = "interopharness.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interopharness"]
