# The py-0.8-httpx entry's runnable as one installable package: the console
# script lands in /usr/local/bin as py-0.8-httpx-client, the path the
# orchestrator's container runners invoke. The valiss dependency is the frozen
# 0.8 series; the Dockerfile supplies it from the v0.8.0 git tag (valiss-py is
# not published to PyPI). httpx is the entry's adapter surface: the surface
# identifier lives in the manifest's adapter_version, the exact patch is this
# lockfile's to bump.
[project]
name = "valiss-interop-py-0-8-httpx"
version = "0"
description = "py-0.8-httpx valiss interop harness entry: httpx client runnable (CONTRACT.md)"
requires-python = ">=3.11"
dependencies = [
    "valiss==0.8.0",
    "cryptography==49.0.0",
    "httpx==0.28.1",
]

[project.scripts]
# Quoted: a bare py-0.8-httpx-client would TOML-parse as a dotted key.
"py-0.8-httpx-client" = "interopharness.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interopharness"]
