# The py-0.8 entry's runnables as one installable package: the console
# scripts land in /usr/local/bin as py-0.8-server and py-0.8-client, the
# paths the orchestrator's container runners invoke. The valiss dependency
# is the frozen 0.8 series; the Dockerfile supplies it from the v0.8.0 git
# tag (valiss-py is not published to PyPI).
[project]
name = "valiss-interop-py-0-8"
version = "0"
description = "py-0.8 valiss interop harness entry: server and client runnables (CONTRACT.md)"
requires-python = ">=3.11"
dependencies = [
    "valiss==0.8.0",
    "cryptography==49.0.0",
    "grpcio==1.82.1",
    "protobuf==7.35.1",
]

[project.scripts]
# Quoted: a bare py-0.8-server would TOML-parse as the dotted key py-0 . 8-server.
"py-0.8-server" = "interopharness.server:main"
"py-0.8-client" = "interopharness.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interopharness", "interoppb"]
# The gRPC stubs are generated (and .gitignore'd) files; artifacts ships them
# despite the ignore, which hatchling otherwise honors.
artifacts = ["/interoppb/interop_pb2.py", "/interoppb/interop_pb2_grpc.py"]
